--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">WeCoders</a>
+            <a class="navbar-brand" href="blogWebsite/index.html">WeCoders</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -21,10 +21,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                        <a class="nav-link active" aria-current="page" href="blogWebsite/index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="about.html">About</a>
+                        <a class="nav-link" href="blogWebsite/about.html">About</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -42,7 +42,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact Us</a>
+                        <a class="nav-link" href="blogWebsite/contact.html">Contact Us</a>
                     </li>
                 </ul>
                 <form class="d-flex" role="search">
@@ -153,7 +153,7 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="image1.jpeg" class="d-block w-100" alt="Image 1" style="width: 100vw; height: 65vh;">
+                <img src="blogWebsite/image1.jpeg" class="d-block w-100" alt="Image 1" style="width: 100vw; height: 65vh;">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Dive into codeVerse</h5>
                     <!-- <p>Some representative placeholder content for the first slide.</p> -->
@@ -163,7 +163,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="image2.jpg" class="d-block w-100" alt="Image 2" style="width: 100vw; height: 65vh;">
+                <img src="blogWebsite/image2.jpg" class="d-block w-100" alt="Image 2" style="width: 100vw; height: 65vh;">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Software News</h5>
                     <!-- <p>Some representative placeholder content for the second slide.</p> -->
@@ -173,7 +173,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="image3.jpg" class="d-block w-100" alt="Image 3" style="width: 100vw; height: 65vh;">
+                <img src="blogWebsite/image3.jpg" class="d-block w-100" alt="Image 3" style="width: 100vw; height: 65vh;">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Technology News</h5>
                     <!-- <p>Some representative placeholder content for the third slide.</p> -->
@@ -210,7 +210,7 @@
                   </a>
                 </div>
                 <div class="col-auto d-none d-lg-block">
-                 <img src="thumb1.avif" alt="Global Conferances" class="bd-placeholder-img" width="200" height="250" style="object-fit: cover;">
+                 <img src="blogWebsite/thumb1.avif" alt="Global Conferances" class="bd-placeholder-img" width="200" height="250" style="object-fit: cover;">
                 </div>
               </div>
             </div>
@@ -227,7 +227,7 @@
                   </a>
                 </div>
                 <div class="col-auto d-none d-lg-block">
-                    <img src="thumb2.png" alt="Hackathons" class="bd-placeholder-img" width="200" height="250" style="object-fit: cover;">
+                    <img src="blogWebsite/thumb2.png" alt="Hackathons" class="bd-placeholder-img" width="200" height="250" style="object-fit: cover;">
                 </div>
               </div>
             </div>
@@ -244,7 +244,7 @@
                   </a>
                 </div>
                 <div class="col-auto d-none d-lg-block">
-                    <img src="thumb3.png" alt="Aiml" class="bd-placeholder-img" width="200" height="250" style="object-fit: cover;">
+                    <img src="blogWebsite/thumb3.png" alt="Aiml" class="bd-placeholder-img" width="200" height="250" style="object-fit: cover;">
                 </div>
               </div>
             </div>
@@ -261,7 +261,7 @@
                   </a>
                 </div>
                 <div class="col-auto d-none d-lg-block">
-                    <img src="thumb4.jpg" alt="Web Dev class="bd-placeholder-img" width="200" height="250" style="object-fit: cover;">
+                    <img src="blogWebsite/thumb4.jpg" alt="Web Dev class="bd-placeholder-img" width="200" height="250" style="object-fit: cover;">
                 </div>
               </div>
             </div>
